# kodomiya

./: .gitignore  README.md  anotacoes.txt  pyproject.toml  requirements.txt
configs/: README.md
connection/: query.ipynb
data/samples/: leilao_imovel_metragem_quadrada.html  leilao_imovel_page_1_samples.html  leilao_imovel_praca_unica.html  leilao_imovel_primeira_e_segunda_praca.html  leilao_imovel_segunda_praca.html  sample_propertie.html  viva_real_html.html
src/: main.py
src/pipelines/: pipeline_chaves_na_mao.py  pipeline_deduplication.py  pipeline_leilao_imovel.py  pipeline_viva_real.py  pipeline_zap_imoveis.py
src/pipelines/resources/: config_loader.py  trading_properties_common_objects.py  trading_properties_function_classes.py  trading_properties_schemas.py
src/pipelines/resources/common/: common_functions.py  common_objects.py
src/scripts/: run_deduplication_pipeline.py  run_imoveis_clustering.py  run_model_training.py  run_pre_analysis.py  run_scrapping_pipelines.py
src/scripts/temp/: get_poi_coordinates.py
tests/: test.ipynb
