[project]
name = "kodomiya"
version = "0.1.0"
description = "A real estate analysis tool that scrapes property listings from Brazilian real estate websites, stores the data in a DuckDB database, and performs clustering analysis to identify patterns and potential investment opportunities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "cloudscraper>=1.2.71",
    "dlt>=1.12.1",
    "duckdb>=1.3.1",
    "geopy>=2.4.1",
    "ipykernel>=6.29.5",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.0",
    "unidecode>=1.4.0",
]
